@startuml connect4.connect4.views.graphics.play

class NextTurnCommand as "panel.\ncommands.\nNextTurnCommand"
class UndoMachinePlayerCommand as "panel.\ncommands.\nUndoMachinePlayerCommand"
class RedoMachinePlayerCommand as "panel.\ncommands.\nRedoMachinePlayerCommand"
class UndoUserPlayerCommand as "panel.\ncommands.\nUndoUserPlayerCommand"
class RedoUserPlayerCommand as "panel.\ncommands.\nRedoUserPlayerCommand"
class ExitCommand as "panel.\ncommands.\nExitCommand"
class PlayPanelView as "panel.\nPlayPanelView"   

class play.Factory{
    +createPlayPanelView() : PlayPanelView
    -createBoardViewFactory() : BoardViewFactory
    -createTurnViewFactory() : TurnViewFactory
}

Factory --> PlayPanelView
Factory --> PlayController
Factory ..> BoardViewFactory
Factory ..> TurnViewFactory
Factory ..> NextTurnCommand
Factory ..> UndoMachinePlayerCommand
Factory ..> RedoMachinePlayerCommand
Factory ..> UndoUserPlayerCommand
Factory ..> RedoUserPlayerCommand
Factory ..> ExitCommand

@enduml